test/error/CMakeFiles/error_atomics_self_reference.dir/depend.make
# Empty dependencies file for error_atomics_self_reference.
# This may be replaced when dependencies are built.
